chore: refactor coding style in controllers, service, and securityConf